Fix compilation errors in FirebaseController.java