@@ -84,7 +84,11 @@ public class FirebaseController {
     }
 
     private static String enc(String s) {
-        return URLEncoder.encode(s, StandardCharsets.UTF_8);
+        try {
+            return URLEncoder.encode(s, "UTF-8");
+        } catch (Exception e) {
+            return s;
+        }
     }
 
     private static String chatId(String uid1, String uid2) {
@@ -107,18 +111,18 @@ public class FirebaseController {
 
         try {
             JSONObject body = new JSONObject();
-            body.put("uid", myUser.getUid());
-            body.put("name", myUser.getName());
-            body.put("latitude", myUser.getLatitude());
-            body.put("longitude", myUser.getLongitude());
-            body.put("public_key", myUser.getPublicKey());
+            body.put("uid", myUser.uid);
+            body.put("name", myUser.name);
+            body.put("latitude", myUser.latitude);
+            body.put("longitude", myUser.longitude);
+            body.put("public_key", myUser.publicKey);
 
             // If this User is actually a LoggedInUser at registration time, these fields
             // are set via the calling code in RegisterActivity -> it uses LoggedInUser.
             if (myUser instanceof LoggedInUser) {
                 LoggedInUser liu = (LoggedInUser) myUser;
-                body.put("password", liu.getPassword());
-                body.put("private_key", liu.getPrivateKey());
+                body.put("password", liu.password);
+                body.put("private_key", liu.privateKey);
             }
 
             String url = SUPABASE_URL + "/rest/v1/boreas_users";
